# trabalho-arquitetura-de-dados

./: .gitignore  404.html  CHECKLIST.md  README.md  index.html  mkdocs.yml  pyproject.toml
delta/: index.html
docs/: delta.md  iceberg.md  index.md  pyspark.md
iceberg/: index.html
notebooks/: delta_lake.ipynb  iceberg.ipynb
pyspark/: index.html
search/: search_index.json
tools/hadoop/: README.txt
