[project]
name = "trabalho-arquitetura-de-dados"
version = "0.1.0"
description = "PySpark com Delta Lake e Apache Iceberg — Engenharia de Dados"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "delta-spark==3.2.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pyspark==3.5.3",
]
